fix wrong font size

--- a/web/style.css
+++ b/web/style.css
@@ -26,7 +26,6 @@
 
 .ih_history {
     background: none !important;
-    font-size: small !important;
     color: #444;
 }
 
